<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename_meeting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_summarize"
        android:icon="@drawable/ic_sparkle"
        android:title="@string/summarize"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_meeting"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_download"
        android:title="@string/export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_suggest_speakers"
        android:title="@string/suggest_speakers"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_topics"
        android:title="@string/topics_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pre_brief"
        android:title="@string/pre_brief_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_audio"
        android:title="@string/share_audio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_retranscribe"
        android:title="@string/retranscribe"
        app:showAsAction="never" />
</menu>
