<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ask_library"
        android:icon="@drawable/ic_sparkle"
        android:title="@string/ask_library_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_download"
        android:title="@string/action_import"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_digest"
        android:title="@string/digest_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>
