<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="record"
        android:enabled="true"
        android:icon="@drawable/ic_mic"
        android:shortcutShortLabel="@string/shortcut_record"
        android:shortcutLongLabel="@string/shortcut_record_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.meetily.mobile"
            android:targetClass="com.meetily.mobile.RecordingActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="import_audio"
        android:enabled="true"
        android:icon="@drawable/ic_download"
        android:shortcutShortLabel="@string/shortcut_import"
        android:shortcutLongLabel="@string/shortcut_import_long">
        <intent
            android:action="com.meetily.mobile.ACTION_IMPORT_PICK"
            android:targetPackage="com.meetily.mobile"
            android:targetClass="com.meetily.mobile.MainActivity" />
    </shortcut>
</shortcuts>
